--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -98,7 +98,7 @@
                                     data-id="7332fd3" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                        <div class="elementor-button-wrapper opal-button-contact7"> <a
-                                             href="#opal-contactform-popup-7332fd3"
+                                             (click)="eventList()"
                                              class="elementor-button-link elementor-button elementor-size-md"
                                              role="button" data-effect="mfp-zoom-in"> <span
                                                 class="elementor-button-content-wrapper"> <span
